# hack-assembler

./: .gitignore  HackAssembler.cabal  LICENSE  README.md  hack-assembler.cabal  package.yaml  stack.yaml
exec/: Main.hs
src/: Main.hs
src/HackAssembler/: AST.hs  Assembler.hs  Eval.hs  Lexer.x  Parser.y
test/HackAssembler/: AssemblerSpec.hs  EvalSpec.hs  LexerSpec.hs  ParserSpec.hs
test/files/add/: Add.asm  Add.hack
