cabal-version:      3.0

name:               hack-assembler
version:            1.0.0

category:           Language
synopsis:           An Assembler for Hack Assembly

homepage:           https://github.com/adrianrl99/hack-assembler

license:            MIT
license-file:       LICENSE

copyright:          2022 Adrian López
author:             Adrian
maintainer:         adrianrlc99@gmail.com


source-repository head
    type:       git
    location:   https://github.com/adrianrl99/hack-assembler.git


common common-options
    build-depends:      base >= 4.14 && < 5

    ghc-options:        -Wall -Wextra -Wcompat -fwarn-tabs -Widentities
                        -Wincomplete-uni-patterns -Wincomplete-record-updates
                        -Wredundant-constraints -Wnoncanonical-monad-instances
                        -Wunused-packages -fwrite-ide-info -hiedir=.hie
                        -Wmissing-export-lists -Wpartial-fields -fhide-source-paths

    default-extensions: StrictData
                        
    
    default-language:   Haskell2010 


executable hasm
    import:             common-options
    main-is:            Main.hs
    hs-source-dirs:     src/

    build-depends:      split
                      , containers
                      , directory
                      , ansi-terminal

    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
